--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,17 @@
-<h1>home#pages</h1>
+<p>home#pages</p>
+<p>Today's Date & Time: <%= Time.now %></p>
+<h2 class="quote">"Think and wonder, wonder and think."</h2>
+<section>
+  <div class="header">
+    <%= image_tag "profile_image3.jpg", class:"avatar" %>
+    <p class="header__p">Teacher turned developer, I have a passion for helping others. </p>
+  </div>
+</section>
+<section>
+  <div class="container">
+    <div class="container__text">Asses</div>
+    <div class="container__text">Schedule</div>
+    <div class="container__text">Learn</div>
+  </div>
+</section>
+
