--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,11 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400&family=Sofia&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <%= yield %>
-    <footer>A simple footer</footer>
+    <footer>Contact</footer>
   </body>
 </html>
