--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
 </section>
 <section>
   <div class="container">
-    <div class="container__text">Asses</div>
+    <div class="container__text">Assess</div>
     <div class="container__text">Schedule</div>
     <div class="container__text">Learn</div>
   </div>
