--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <p>home#pages</p>
-<p>Today's Date & Time: <%= Time.now %></p>
 <h2 class="quote">"Think and wonder, wonder and think."</h2>
+
 <section>
   <div class="header">
     <%= image_tag "profile_image3.jpg", class:"avatar" %>
@@ -9,9 +9,14 @@
 </section>
 <section>
   <div class="container">
-    <div class="container__text">Assess</div>
-    <div class="container__text">Schedule</div>
-    <div class="container__text">Learn</div>
+    <div class="container__text"></div>
+    <div class="container__text"></div>
+    <div class="container__text"></div>
   </div>
 </section>
+<section>
+  <h3>Contact to schedule an appointment!</h3>
+</section>
 
+<!-- render _contact_form.html.erb below -->
+<%= render 'contact/contact_form' %>
