--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -51,20 +51,47 @@ body {
   margin: 0 25px;
 }
 
-.container {
+.steps_container {
+  width: 50%;
+  margin: 0 auto;
+
+}
+.steps_container--grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   justify-items: center;
-  margin: 0 auto;
-  width: 50%;
+  justify-content: center;
+  grid-column-gap: 1rem;
 }
-
 .container__text {
   background-color: $orange;
   text-align: center;
-  width: 180px;
-  height: 120px;
-  margin: 0 40px 50px 40px;
+  width: 100%;
+  // height: 120px;
+  margin-bottom:50px;
+}
+
+.contact_form_container {
+  width: 50%;
+  margin: 0 auto;
+  background-color: $blue;
+  color: $peach;
+}
+
+.contact_form {
+  display: grid;
+  justify-content: center;
+}
+
+.contact-form-text-area {
+  width: 100%;
+  border-radius: 4px;
+  border: none;
+}
+
+.form_label {
+  margin-top: 18px;
+  margin-bottom: 0px;
 }
 
 footer {
