--- a/app/views/contact/_contact_form.html.erb
+++ b/app/views/contact/_contact_form.html.erb
@@ -1,11 +1,11 @@
 <%= form_for @contact, url: contact_path do |form| %>
-<div class="col-md-6" >
-  <%= form.label :name %><br>
+<div class="form-group" >
+  <%= form.label :name, class: "form_label" %><br>
   <%= form.text_field :name, required: true, class: "contact-form-text-area" %><br>
-  <%= form.label :email %><br>
-  <%= form.text_field :email %><br>
-  <%= form.label :message %><br>
-  <%= form.text_area :message, required: true, class: "contact-form-text-area" %>
+  <%= form.label :email, class: "form_label" %><br>
+  <%= form.text_field :email, required: true, class: "contact-form-text-area"%><br>
+  <%= form.label :message, class: "form_label" %><br>
+  <%= form.text_area :message, required: true, class: "contact-form-text-area" %><br>
   <%= form.submit 'Send Message', class: "btn btn-primary" %>
   </div>
 <% end %>
