--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -2,7 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-
 // color variables
 $peach: hsl(28, 76%, 92%);
 $blue: hsl(227, 18%, 39%);
@@ -28,9 +27,23 @@ body {
   font-size: 2rem;
 }
 
+.nav-bar {
+  display: flex;
+  justify-content: center;
+  max-width: 100%;
+  color: $blue;
+  margin: 24px 0;
+    :visited {
+      color: $blue;
+  }
+}
 
+.nav_link {
+  padding: 0 18px;
+  text-transform: uppercase;
+}
 
-.header {
+.hero {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -47,15 +60,15 @@ body {
   height: 200px;
 }
 
-.header__p {
+.hero__p {
   margin: 0 25px;
 }
 
 .steps_container {
   width: 50%;
   margin: 0 auto;
-
 }
+
 .steps_container--grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -63,11 +76,11 @@ body {
   justify-content: center;
   grid-column-gap: 1rem;
 }
+
 .container__text {
   background-color: $orange;
   text-align: center;
   width: 100%;
-  // height: 120px;
   margin-bottom:50px;
 }
 
@@ -81,6 +94,9 @@ body {
 .contact_form {
   display: grid;
   justify-content: center;
+  :hover {
+    cursor: url("pencil.png"), pointer ;
+  }
 }
 
 .contact-form-text-area {
