--- a/app/views/contact/_contact_form.html.erb
+++ b/app/views/contact/_contact_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for @contact, url: contact_path do |form| %>
-<div class="form-group" >
+<div class="form-group" id="form">
   <%= form.label :name, class: "form_label" %><br>
   <%= form.text_field :name, required: true, class: "contact-form-text-area" %><br>
   <%= form.label :email, class: "form_label" %><br>
