--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,14 @@
-<p>home#pages</p>
-<h2 class="quote">"Think and wonder, wonder and think."</h2>
+<p>root#pages</p>
+<header class="quote">"Think and wonder, wonder and think."</header>
 
 <section>
-  <div class="header">
+  <h1>Howdy! I'm Laura, aka Mrs. Abowd.</h1>
+  <div class="hero">
     <%= image_tag "profile_image3.jpg", class:"avatar" %>
-    <p class="header__p">Teacher turned developer, I have a passion for helping others. I've been an elementary school teacher for ten years and have taught both first and second grade. Although teaching is my passion, I've transitioned into helping people in the classroom, to help others over the web.</p>
+    <p class="hero__p">Teacher turned developer, I have a passion for helping others. I've been an elementary school teacher for ten years and have taught both first and second grade. Although teaching is my passion, I've transitioned into helping people in the classroom, to help others over the web.</p>
   </div>
 </section>
-<section class="steps_container">
+<section class="steps_container cursor">
   <div class="steps_container--grid" >
     <div class="container__text">Assess<br><i class="far fa-clipboard fa-4x"></i></div>
     <div class="container__text">Schedule<br><i class="far fa-calendar-alt fa-4x"></i></div>
