--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 <header class="quote">"Think and wonder, wonder and think."</header>
 
 <section>
-  <h1>Howdy! I'm Laura, aka Mrs. Abowd.</h1>
+  <h1 class="h1__home">Howdy! I'm Laura, aka Mrs. Abowd.</h1>
   <div class="hero">
     <%= image_tag "profile_image3.jpg", class:"avatar" %>
     <p class="hero__p">Teacher turned developer, I have a passion for helping others. I've been an elementary school teacher for ten years and have taught both first and second grade. Although teaching is my passion, I've transitioned into helping people in the classroom, to help others over the web.</p>
