--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -43,6 +43,9 @@ body {
   text-transform: uppercase;
 }
 
+.h1__home {
+  text-align: center;
+}
 .hero {
   display: flex;
   justify-content: center;
