--- a/app/views/contact/_contact_form.html.erb
+++ b/app/views/contact/_contact_form.html.erb
@@ -6,6 +6,6 @@
   <%= form.text_field :email, required: true, class: "contact-form-text-area"%><br>
   <%= form.label :message, class: "form_label" %><br>
   <%= form.text_area :message, required: true, class: "contact-form-text-area" %><br>
-  <%= form.submit 'Send Message', class: "btn btn-primary" %>
+  <%= form.submit 'Send Message', class: "btn btn__form " %>
   </div>
 <% end %>
