--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,6 @@
   <body>
     <%= render 'shared/navbar' %>
     <%= yield %>
-    <footer>Contact</footer>
+    <%= render 'shared/footer' %>
   </body>
 </html>
