--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,8 @@
-<nav class="nav-bar">
+<nav class="nav-bar header__home">
   <%= link_to "Home", root_path, class: "nav_link" %>
   <%= link_to "Tutorials", tutorials_path, class: "nav_link" %>
-  <%= link_to "Contact", contact_path(@contact, :anchor => "form"), class: "nav_link" %>
+  <header class="header__home">
+    <h1>Welcome! Class is in session. </h1>
+    <h2>Online lessons from a certified teacher.</h2>
+</header>
 </nav>
