--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,5 @@
 <!-- <p>root#pages</p> -->
-<header class="header__home">
-  <h1>Welcome! Class is in session. </h1>
-  <h2>Online lessons from a certified teacher.</h2>
-</header>
+
 <section>
   <div class="hero">
     <%= image_tag "profile_image3.jpg", class:"avatar" %>
@@ -16,19 +13,19 @@
   <div class="steps_container--grid" >
     <div class="paint-splash-img">
       <%= image_tag "paint-splash-1.svg", class:"image" %>
-      <div class="steps__text">Assess<br><i class="far fa-clipboard fa-3x"></i></div>
+      <div class="steps__text">Assess</div>
     </div>
     <div class="paint-splash-img">
       <%= image_tag "paint-splash-2.svg", class:"image" %>
-       <div class="steps__text">Schedule<br><i class="far fa-calendar-alt fa-3x"></i></div>
+       <div class="steps__text">Schedule</div>
     </div>
     <div class="paint-splash-img">
       <%= image_tag "paint-splash-3.svg", class:"image" %>
-       <div class="steps__text">Learn<br><i class="fas fa-chalkboard-teacher fa-3x"></i></div>
+       <div class="steps__text">Learn</div>
     </div>
   </div>
 </section>
-<section class="contact_form_container">
+<section class="contact_form_section">
   <div class="contact_form">
     <h3>Contact to schedule an appointment!</h3>
     <%= render 'contact/contact_form' %>
