--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,10 @@
 <!-- <p>root#pages</p> -->
 
-<section>
+<section class="hero-section">
   <div class="hero">
+    <h3>Mrs. Abowd provides tutoring to your little ones.</h3>
     <%= image_tag "profile_image3.jpg", class:"avatar" %>
     <div>
-    <h3>Mrs. Abowd provides tutoring to your little ones.</h3>
     <p class="hero__p">Teacher turned developer, I have a passion for helping others. I've been an elementary school teacher for ten years and have taught both first and second grade. Although teaching is my passion, I've transitioned into helping people in the classroom, to help others over the web.</p>
     </div>
   </div>
@@ -33,5 +33,6 @@
 </section>
 <div class="quote">
   "Think and wonder, wonder and think."
+  -Dr. Seuss
 </div>
 
