--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,9 @@
-<nav class="nav-bar header__home">
-  <%= link_to "Home", root_path, class: "nav_link" %>
-  <%= link_to "Tutorials", tutorials_path, class: "nav_link" %>
+<nav class="nav-bar ">
+  <div class="nav-bar__links">
+    <%= link_to "Home", root_path, class: "nav_link" %>
+    <%= link_to "Tutorials", tutorials_path, class: "nav_link" %>
+  </div>
+
   <header class="header__home">
     <h1>Welcome! Class is in session. </h1>
     <h2>Online lessons from a certified teacher.</h2>
