--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -11,9 +11,6 @@ body {
 }
 
 .header__home {
-  background-color: $blue;
-  color: $peach;
-  height: 200px;
   text-align: center;
 }
 
@@ -24,22 +21,24 @@ body {
 }
 
 .nav-bar {
-  display: flex;
-  justify-content: center;
   max-width: 100%;
-  color: $blue;
   margin: 24px 0;
   background-color: $blue;
   color: $peach;
   height: 200px;
-    :visited {
-      color: $blue;
-  }
+  margin-top: 0;
+}
+
+.nav-bar__links {
+    display: flex;
+    justify-content: flex-end;
+
 }
 
 .nav_link {
-  padding: 0 18px;
+  padding: 18px 32px;
   text-transform: uppercase;
+   color: $peach;
 }
 
 .h1__home {
