styled navbar & added background img

--- a/app/assets/stylesheets/_assets.scss
+++ b/app/assets/stylesheets/_assets.scss
@@ -6,4 +6,5 @@ $orange: hsl(8, 100%, 75%);
 // Typography
 $Raleway: 'Raleway', sans-serif;
 //font-weight: 300, 400;
-$sofia: 'Sofia', cursive;
+
+$grover: 'Irish Grover', cursive;
