--- a/app/views/contact/_contact_form.html.erb
+++ b/app/views/contact/_contact_form.html.erb
@@ -1,11 +1,11 @@
 <%= form_for @contact, url: contact_path do |form| %>
-<div class="form-group" id="form">
+<div class="form-group " id="form">
   <%= form.label :name, class: "form_label" %><br>
   <%= form.text_field :name, required: true, class: "contact-form-text-area" %><br>
   <%= form.label :email, class: "form_label" %><br>
   <%= form.text_field :email, required: true, class: "contact-form-text-area"%><br>
   <%= form.label :message, class: "form_label" %><br>
   <%= form.text_area :message, required: true, class: "contact-form-text-area" %><br>
-  <%= form.submit 'Send Message', class: "btn btn__form " %>
+  <%= form.submit 'Send Message', class: "btn btn__form  col-lg-6" %>
   </div>
 <% end %>
