--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,9 +3,5 @@
     <%= link_to "Home", root_path, class: "nav_link" %>
     <%= link_to "Tutorials", tutorials_path, class: "nav_link" %>
   </div>
-
-  <header class="header__home">
-    <h1>Welcome! Class is in session. </h1>
-    <h2>Online lessons from a certified teacher.</h2>
-</header>
+  <h1 class="h1__home">Online lessons from<br> a certified teacher.</h1>
 </nav>
