--- a/app/views/pages/tutorials.html.erb
+++ b/app/views/pages/tutorials.html.erb
@@ -1,1 +1,21 @@
-<p>tutorials#pages</p>
+<div class="paint-splash-img steps_container">
+  <%= image_tag "paint-splash-2.svg", class:"image" %>
+<div class="steps__text">Tutorials</div>
+</div>
+
+
+<p>Check out <%= link_to 'Storyline Online', "https://www.storylineonline.net/" %>
+  to view videos featuring celebrated actors reading children’s books.
+</p>
+
+<div>
+  <h3 class="check">CVC Pattern Words</h3>
+  <p>CVC stands for consonant-vowel-consonant. A C-V-C word is a 3-letter word that follows the consonant-vowel-consonant spelling pattern. Click on the CVC word List to practice some of these words with your child.</p>
+</div>
+<div>
+  Check out Jack Hartmann's Videos for kids on CVC Patterns.
+</div>
+<div>
+<p>Letter A</p>
+
+</div>
