--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -16,17 +16,22 @@ body {
   color: $blue;
 }
 
-
 .quote {
   font-family: $grover;
+  font-weight: bold;
   text-align: center;
-  font-size: 2.5rem;
+  font-size: 3rem;
+  letter-spacing: 0.5rem;
 }
 
 .quote__name {
   font-family: $Raleway;
+  font-weight: lighter;
   margin-bottom: 50px;
+  letter-spacing: 0;
+  font-size: 2rem;
 }
+
 .nav-bar {
   max-width: 100%;
   color: $peach;
@@ -47,15 +52,17 @@ body {
 }
 
 .nav-bar__links {
-    display: flex;
-    justify-content: flex-end;
-    position: relative;
+  display: flex;
+  justify-content: flex-end;
+  position: relative;
 }
 
 .nav_link {
-  padding: 18px 24px;
+  padding: 18px 32px;
   text-transform: uppercase;
   color: $peach;
+  font-size: 1.5rem;
+  font-weight: 600;
 }
 
 .h1__home {
@@ -73,7 +80,7 @@ body {
   justify-items: center;
   align-items: center;
   background-position: center;
-  margin-top: 150px;
+  margin-top: 80px;
   // width: 100%;
 }
 
@@ -103,7 +110,7 @@ body {
 }
 
 .steps_container {
-  margin: 100px auto;
+  margin: 60px auto;
 }
 
 .steps_container--grid {
