--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,15 @@
 <nav class="nav-bar ">
   <div class="nav-bar__links">
     <%= link_to "Home", root_path, class: "nav_link" %>
+    <% if user_signed_in? %>
+  <li>
+  <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
+  </li>
+<% else %>
+  <li>
+  <%= link_to('Login', new_user_session_path) %>
+  </li>
+<% end %>
   </div>
   <h1 class="h1__home">Online lessons from<br>a certified teacher.</h1>
 </nav>
