changed contact form columns from 8 to 6

--- a/app/assets/stylesheets/_assets.scss
+++ b/app/assets/stylesheets/_assets.scss
@@ -1,7 +1,8 @@
 // color variables
 $peach: hsl(28, 76%, 92%);
-$blue: hsl(227, 18%, 39%);
+$blue: hsl(209, 88%, 28%);
 $orange: hsl(8, 100%, 75%);
+$pink: hsl(359, 91%, 82%);
 
 // Typography
 $Raleway: 'Raleway', sans-serif;
