--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -70,11 +70,11 @@ html {
 .h1__home {
   position: relative;
   text-align: center;
-  margin: 0;
+  margin: 12px 0;
   padding: 0;
   color: #EC5656;
-  font-size: 3rem;
-
+  font-size: 2.5rem;
+  color: $blue;
 }
 
 .hero-section  {
