--- a/app/assets/stylesheets/pages/_login.scss
+++ b/app/assets/stylesheets/pages/_login.scss
@@ -15,7 +15,7 @@
   }
   label {
     margin-top: 18px;
-    color: $orange;
+    color: $blue;
   }
 }
 
@@ -29,6 +29,6 @@
 }
 
 .btn__login {
-  background-color: $orange;
+  background-color: $pink;
   margin-bottom: 18px;
 }
