--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <!-- <p>root#pages</p> -->
 <!-- <div class="container"> -->
-
+  <h1 class="h1__home">Online lessons from<br>a certified teacher.</h1>
 <section class="steps_container col-lg-8 cursor">
   <div class="steps_container--grid" >
     <div class="paint-splash-img">
@@ -29,7 +29,7 @@
   </div>
 </section>
 
-<section class="contact_form_section col-lg-8">
+<section class="contact_form_section col-lg-6">
   <div class="contact_form">
     <h3>Contact to schedule an appointment!</h3>
     <%= render 'contact/contact_form' %>
