--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -35,28 +35,14 @@ html {
 }
 
 .nav-bar {
-  max-width: 100%;
-  color: $peach;
-  height: 250px;
-  margin-top: 0;
-  // position: relative;
-}
-
-.nav-bar::before {
-  content: "";
-  background-image: image-url('background-img.jpg');
-  background-repeat: none;
-  background-position: center;
-  position: absolute;
-  opacity: .75;
   width: 100%;
-  height: 250px;
+  height: 75px;
+  background-color: $blue;
 }
 
 .nav-bar__links {
   display: flex;
   justify-content: flex-end;
-  position: relative;
 }
 
 .nav_link {
@@ -66,6 +52,32 @@ html {
   font-size: 1.5rem;
   font-weight: 600;
 }
+
+.header__image {
+  color: $peach;
+  margin-top: 0;
+  background-image: image-url('background-img.jpg');
+  background-color: $blue;
+
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: .75;
+}
+
+// .nav-bar::before {
+  // content: "";
+  // background-image: image-url('background-img.jpg');
+  // background-color: $blue;
+  // background-attachment: fixed;
+  // background-position: center;
+  // background-repeat: no-repeat;
+  // background-size: cover;
+  // position: absolute;
+  // opacity: .75;
+  // width: 100%;
+  // height: 100%;
+// }
 
 .h1__home {
   position: relative;
@@ -78,37 +90,28 @@ html {
 }
 
 .hero-section  {
-  display: grid;
-  justify-items: center;
-  align-items: center;
-  background-position: center;
   margin-top: 80px;
-  // width: 100%;
 }
 
 .hero {
-  background-color: $peach;
+  background-color: #FEFAF6;
+  border-radius: 8px;
   display: grid;
   grid-template-columns: 30% 70%;
-  justify-content: center;
   align-items: center;
-  justify-items: center;
-  column-gap: 10px;
-  row-gap: 16px;
   margin: 0 auto;
   height: 350px;
 }
 
-.hero__h3 {
-  grid-column:  1 / span 2;
-  text-align: center;
-  font-size: 2rem;
+.hero__content-h3 {
+  // font-size: 2rem;
 }
 
-.avatar {
+.profile-img {
   border-radius: 50%;
-  width: 200px;
+  border: solid 5px $blue;
   height: 200px;
+  justify-self: center;
 }
 
 .steps_container {
