--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,28 +1,6 @@
-<!-- <p>root#pages</p> -->
-<!-- <div class="container"> -->
-
-<section class="steps_container col-lg-8 cursor">
-  <div class="steps_container--grid" >
-    <div class="paint-splash-img">
-      <%= image_tag "paint-splash-1.svg", class:"image" %>
-      <div class="steps__text">Schedule</div>
-    </div>
-    <div class="paint-splash-img">
-      <%= image_tag "paint-splash-2.svg", class:"image" %>
-       <!-- <div class="steps__text"> -->
-        <%= link_to "Tutorials", tutorials_path, class: "steps__text"%>
-       <!-- Tutorials</div> -->
-    </div>
-    <div class="paint-splash-img">
-      <%= image_tag "paint-splash-3.svg", class:"image" %>
-       <!-- <div class="steps__text">Contact</div> -->
-       <%= link_to "Contact", contact_path(@contact, :anchor => "form"), class: "steps__text" %>
-    </div>
-  </div>
-</section>
 <section class="hero-section ">
   <div class="hero col-lg-8">
-    <%= image_tag "profile_img_sm.jpg", class:"profile-img" %>
+    <%= image_tag "profile-img-sm.png", class:"profile-img" %>
     <div class="hero__content">
       <h3 class="hero__content-h3">Meet Mrs. Abowd</h3>
       <p class="hero__content-p">Teacher turned developer, I have a passion for helping others. I've been an elementary school teacher for ten years and have taught both first and second grade. Although teaching is my passion, I've transitioned into helping people in the classroom, to help others over the web.</p>
@@ -30,10 +8,22 @@
 
   </div>
 </section>
-
-<section class="contact_form_section col-lg-8">
-  <div class="contact_form">
-    <h3>Contact to schedule an appointment!</h3>
+<section class="steps_container  cursor">
+  <div class="steps_container--grid col-lg-8" >
+    <div class="paint-splash-img col-lg-4">
+      <%= image_tag "paint-splash-1.svg", class:"image" %>
+      <div class="steps__text">Schedule</div>
+    </div>
+    <div class="paint-splash-img col-lg-4">
+      <%= image_tag "paint-splash-2.svg", class:"image" %>
+        <%= link_to "Tutorials", tutorials_path, class: "steps__text"%>
+    </div>
+  </div>
+</section>
+<section class="contact_form_section  ">
+  <div class="contact_form col-lg-8">
+    <h3>Not sure where to start?</h3>
+    <p>Contact to schedule an appointment!</p>
     <%= render 'contact/contact_form' %>
   </div>
 </section>
@@ -41,4 +31,3 @@
   "Think and wonder,<br> wonder and think."
 <div class="quote__name">-Dr. Seuss</div>
 </div>
-<!-- </div> -->
