--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,13 +1,15 @@
 <nav class="nav-bar">
   <div class="nav-bar__links">
-   <%= link_to "Home", root_path, class: "nav_link" %>
+    <%= link_to "Home", root_path, class: "nav_link" %>
+  </div>
+  <div class="nav-bar__links">
+    <%= link_to "Contact", contact_path(@contact,:anchor => "form"), class: "nav_link" %>
     <% if user_signed_in? %>
-    <%= link_to('Logout', destroy_user_session_path, method: :delete, class: "nav_link") %>
+    <%= link_to('Logout',destroy_user_session_path, method: :delete, class: "nav_link") %>
     <% else %>
     <%= link_to('Login', new_user_session_path, class: "nav_link") %>
     <% end %>
   </div>
 </nav>
 <div class="header__image jumbotron">
-  <h1 class="h1__home">Online lessons from<br>a certified teacher.</h1>
 </div>
