--- a/app/assets/stylesheets/_assets.scss
+++ b/app/assets/stylesheets/_assets.scss
@@ -1,8 +1,9 @@
 // color variables
 $peach: hsl(28, 76%, 92%);
-$blue: hsl(209, 88%, 28%);
+$blue: hsl(223, 98%, 16%);
 $orange: hsl(8, 100%, 75%);
 $pink: hsl(359, 91%, 82%);
+$yellow: hsl(50, 90%, 65%);
 
 // Typography
 $Raleway: 'Raleway', sans-serif;
