--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
+<div class="container">
 <section class="hero-section ">
-  <div class="hero col-lg-8">
+  <div class="hero col-xl-12">
     <%= image_tag "profile-img-sm.png", class:"profile-img" %>
     <div class="hero__content">
       <h3 class="hero__content-h3">Meet Mrs. Abowd</h3>
@@ -8,20 +9,21 @@
 
   </div>
 </section>
-<section class="steps_container  cursor">
-  <div class="steps_container--grid col-lg-8" >
+<section class="steps_container cursor">
+  <h3 class="steps_container-h3">Mrs. Abowd provides two learning options to get your student to the next level:</h3>
+  <div class="steps_container--grid col-xl-12" >
     <div class="paint-splash-img col-lg-4">
       <%= image_tag "paint-splash-1.svg", class:"image" %>
       <div class="steps__text">Schedule</div>
     </div>
     <div class="paint-splash-img col-lg-4">
       <%= image_tag "paint-splash-2.svg", class:"image" %>
-        <%= link_to "Tutorials", tutorials_path, class: "steps__text"%>
+        <%= link_to "Tutorials", tutorials_path,class: "steps__text"%>
     </div>
   </div>
 </section>
 <section class="contact_form_section  ">
-  <div class="contact_form col-lg-8">
+  <div class="contact_form col-xl-12">
     <h3>Not sure where to start?</h3>
     <p>Contact to schedule an appointment!</p>
     <%= render 'contact/contact_form' %>
@@ -30,4 +32,5 @@
 <div class="quote">
   "Think and wonder,<br> wonder and think."
 <div class="quote__name">-Dr. Seuss</div>
+</div>
 </div>
