--- a/app/views/pages/tutorials.html.erb
+++ b/app/views/pages/tutorials.html.erb
@@ -1,21 +1,19 @@
 <div class="paint-splash-img steps_container">
   <%= image_tag "paint-splash-2.svg", class:"image" %>
-<div class="steps__text">Tutorials</div>
+  <div class="steps__text">Private Tutoring</div>
 </div>
+<section>
+  <p>One on one learning is one of the most effective ways to meet your child’s needs. Mrs. Abowd specializes in reading, writing, and math subjects and can help your child excell in these areas.</p>
+  <div class="resources-container col-xl-12">
+  <div class="circle-yellow"></div>
+  <div class="circle-yellow"></div>
+  <div class="circle-yellow"></div>
+  <div class="circle-yellow"></div>
+</div>
+</section>
 
-
-<p>Check out <%= link_to 'Storyline Online', "https://www.storylineonline.net/" %>
-  to view videos featuring celebrated actors reading children’s books.
-</p>
-
+<h3>K-2 Science</h3>
 <div>
-  <h3 class="check">CVC Pattern Words</h3>
-  <p>CVC stands for consonant-vowel-consonant. A C-V-C word is a 3-letter word that follows the consonant-vowel-consonant spelling pattern. Click on the CVC word List to practice some of these words with your child.</p>
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/EhIFS9T7dNA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-<div>
-  Check out Jack Hartmann's Videos for kids on CVC Patterns.
-</div>
-<div>
-<p>Letter A</p>
 
-</div>
