added input field sizes to contact form

--- a/app/views/contact/_contact_form.html.erb
+++ b/app/views/contact/_contact_form.html.erb
@@ -1,11 +1,21 @@
 <%= form_for @contact, url: contact_path do |form| %>
-<div class="form-group" id="form">
-  <%= form.label :name, class: "form_label" %><br>
-  <%= form.text_field :name, required: true, class: "contact-form-text-area" %><br>
-  <%= form.label :email, class: "form_label" %><br>
-  <%= form.text_field :email, required: true,  class: "contact-form-text-area"%><br>
-  <%= form.label :message, class: "form_label" %><br>
-  <%= form.text_area :message, required: true,  size: "30x10", class: "contact-form-text-area" %><br>
-  <%= form.submit 'Send Message', class: "btn btn__form " %>
+<div class="form-group " id="form">
+  <div class="contact_information__container row">
+    <div class="col-xl-6">
+      <%= form.label :name, class: "form_label" %>
+      <%= form.text_field :name, required: true, class: "contact-form-text-area" %>
+    </div>
+    <div class="col-xl-6">
+      <%= form.label :email, class: "form_label" %>
+      <%= form.text_field :email, required: true,  class: "contact-form-text-area"%>
+    </div>
   </div>
+  <div class="row">
+    <div class="col-xl-12">
+      <%= form.label :message, class: "form_label" %><br>
+      <%= form.text_area :message, required: true,  size: "30x5", class: "contact-form-text-area" %>
+      <%= form.submit 'Send Message', class: "btn btn__form " %>
+    </div>
+  </div>
+</div>
 <% end %>
