--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -151,18 +151,22 @@ html {
   color: $blue;
   display: grid;
   justify-content: center;
+  justify-items: left;
   margin: 100px auto;
+  padding: 32px 0;
 }
 
 .contact-form-text-area {
   width: 100%;
   border-radius: 4px;
-  border: none;
+  border: 2px solid $blue;
+  background-color: #FBF0B6;
 }
 
 .form_label {
   margin-top: 18px;
   margin-bottom: 0px;
+  font-weight: bold;
 }
 
 footer {
