added col-12 to tutorials header

--- a/app/views/pages/tutorials.html.erb
+++ b/app/views/pages/tutorials.html.erb
@@ -1,15 +1,13 @@
-<div class="paint-splash-img steps_container">
-  <%= image_tag "paint-splash-2.svg", class:"image" %>
-  <div class="steps__text">Private Tutoring</div>
-</div>
 <section>
-  <p>One on one learning is one of the most effective ways to meet your child’s needs. Mrs. Abowd specializes in reading, writing, and math subjects and can help your child excell in these areas.</p>
-  <div class="resources-container col-xl-12">
-  <div class="circle-yellow"></div>
-  <div class="circle-yellow"></div>
-  <div class="circle-yellow"></div>
-  <div class="circle-yellow"></div>
-</div>
+  <div class= "hero-tutorials col-xl-12">
+    <p>One on one learning is one of the most effective ways to meet your child’s needs. Mrs. Abowd specializes in reading, writing, and math subjects and can help your child excell in these areas.</p>
+    <div class="resources-container col-xl-12">
+    <div class="circle-yellow"></div>
+    <div class="circle-yellow"></div>
+    <div class="circle-yellow"></div>
+    <div class="circle-yellow"></div>
+  </div>
+  </div>
 </section>
 
 <h3>K-2 Science</h3>
