--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,14 +15,14 @@
         <%= image_tag "paint-splash-2.svg", class:"image" %>
         <div class="steps__text">
           <p>Private 30 minute tutoring sessions</p>
-          <%= link_to "Learn More", tutorials_path,class: "learn_more-link"%>
+          <%= link_to "Learn More", tutoring_path,class: "learn_more-link"%>
         </div>
       </div>
       <div class="paint-splash-img col-lg-4">
         <%= image_tag "paint-splash-1.svg", class:"image" %>
         <div class="steps__text">
           <p>Access to online learning resources</p>
-          <p class="learn_more-link">Learn More</p>
+          <%= link_to "Learn More", resources_path,class: "learn_more-link"%>
         </div>
       </div>
     </div>
