--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,11 @@
-<footer>
-
-</footer>
+  <!-- footer -->
+  <div id="footer" class="container-fluid">
+    <div class="copyright">
+    <i class="far fa-copyright"></i> 2020 Copyright: Teacher In Tech
+    </div>
+    <ul>
+      <li class="footer__li">Testimonials</li>
+      <li class="footer__li">Contact</li>
+      <li class="footer__li">Log In</li>
+    </ul>
+  </div>
