--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -148,7 +148,7 @@ html {
 }
 
 .learn_more-link:hover {
-      text-decoration: none;
+  text-decoration: none;
   background: linear-gradient(-45deg, transparent 40%, $blue 0, $blue 60%, transparent 0) 0 1em,
     linear-gradient(45deg, transparent 40%, $blue 0, $blue 60%, transparent 0) .1em 1em;
   background-repeat: repeat-x;
@@ -178,9 +178,22 @@ html {
   font-weight: bold;
 }
 
-footer {
-  color: $peach;
+#footer {
+  color: $blue;
   background: $pink;
-  bottom: 0;
-  height: 3rem;
+  height: 4rem;
+  background-color: $pink;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  ul {
+      display: flex;
+      list-style-type: none;
+      margin: 0;
+    }
+}
+
+.footer__li,
+.copyright {
+  padding: 0 24px;
 }
