--- a/app/views/pages/tutoring.html.erb
+++ b/app/views/pages/tutoring.html.erb
@@ -1,8 +1,13 @@
 <div class="container">
   <section>
+    <div class="header col-xl-12">
+      <p>One-on-one learning is one of the most effective ways to meet your child's needs. I specialize in reading, writing, and math.</p>
+      <p>I use the following 4-step process for all students.</p>
+    </div>
+  </section>
+  <section>
     <div class="hero-tutorials col-xl-12">
-      <p>One on one learning is one of the most effective ways to meet your child’s needs. Mrs. Abowd specializes in reading, writing, and math subjects and can help your child excel in these areas.</p>
-      <div class="resources-container col-xl-12">
+      <div class="flex-container col-xl-12">
         <div class="circle-container col-xl-3">
           <div class="circle-yellow">
             <div class="number">1</div>
@@ -10,7 +15,6 @@
           <h2 class="tutoring__h2">Evaluate</h2>
           <p>Meet with your student to assess their learning</p>
         </div>
-
         <div class="circle-container col-xl-3">
           <div class="circle-yellow">
             <div class="number">2</div>
@@ -18,7 +22,6 @@
           <h2 class="tutoring__h2">Plan</h2>
           <p>Meet with your student to assess their learning</p>
         </div>
-
         <div class="circle-container col-xl-3">
           <div class="circle-yellow">
             <div class="number">3</div>
@@ -26,15 +29,31 @@
           <h2 class="tutoring__h2">Teach</h2>
           <p>Meet with your student to assess their learning</p>
         </div>
-
-          <div class="circle-container col-xl-3">
-            <div class="circle-yellow">
-              <div class="number">4</div>
-            </div>
-            <h2 class="tutoring__h2">Assess</h2>
-          <p>Meet with your student to assess their learning</p>
+        <div class="circle-container col-xl-3">
+          <div class="circle-yellow">
+            <div class="number">4</div>
           </div>
+          <h2 class="tutoring__h2">Assess</h2>
+          <p>Meet with your student to assess their learning</p>
         </div>
       </div>
+    </div>
+  </section>
+  <section>
+    <h3 class="tutoring__h3">Pricing</h3>
+    <div class="flex-container__pricing">
+      <div class="circle-container col-xl-5">
+        <div class="circle-yellow">
+          <div class="number__pricing">$50</div>
+        </div>
+        <h4>Initial consultation and student evaluation.</h4>
+      </div>
+      <div class="circle-container col-xl-5">
+        <div class="circle-yellow">
+          <div class="number__pricing">$30</div>
+        </div>
+        <h4>30 minutes tutoring sessions.</h4>
+      </div>
+    </div>
   </section>
 </div>
